<resources>
    <string name="app_name">AutoServicesKrd</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="entertoapp">Войти в систему</string>
    <string name="title_activity_email_pass">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Пароль</string>
    <string name="next">Продолжить</string>
    <string name="or">или</string>
    <string name="surname">Введите фамилию</string>
    <string name="name">Введите имя</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
</resources>
